# backend/routes/user.php
@@ -1,0 +1,18 @@
+<?php
+
+/** @var \Laravel\Lumen\Routing\Router $router */
+
+/*
+|--------------------------------------------------------------------------
+| Application Routes
+|--------------------------------------------------------------------------
+|
+| Here is where you can register all of the routes for an application.
+| It is a breeze. Simply tell Lumen the URIs it should respond to
+| and give it the Closure to call when that URI is requested.
+|
+*/
+
+$router->group(['middleware' => 'auth', 'prefix' => '/user'], function () use ($router) {
+    $router->get('/', 'UserController@list');
+});
